fixed gap between row and logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ button[type="submit"] {
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  
 }
 
 
